# TinyBERT-XAI

./: .gitignore  CLAUDE.md  ITERATIONS.md  README.md  REPORT.md  USAGE.md  config.yaml  environment.yml  main.ipynb  main.py  pyproject.toml  requirements.txt
configs/: default.yaml  kd_full.yaml
docs/notes/: 01-tinybert-implementation-notes.md  02-project-synthesis.md  03-roadmap.md  04-iter0-plan.md  05-current-codebase-concept-diagram.md  06-training-pipeline-layering.md
results/analysis/: factorial_report.md  main_effects_table.md  student_ablation_table.md
scripts/: 00_smoke_test.py  01_train_teacher.py  01b_eval_teacher.py  02_train_student.py  02b_eval_student.py  06_analyze_factorial.py  07_run_dataset.py  08_cross_dataset_analysis.py  08b_representation_analysis.py  _config_cli.py  _dataset_cli.py  _student_cli.py  build_multivalue.py  migrate_results_layout.py
src/: __init__.py  config.py  data.py  models.py  runspec.py  utils.py
src/analysis/: __init__.py  cross_dataset.py  factorial.py  loaders.py  plots.py
src/data/: datasets.py
src/distill/: losses.py
src/eval/: __init__.py  metrics.py
tests/: test_conditions.py  test_cross_dataset.py  test_datasets.py  test_factorial.py  test_losses.py  test_metrics.py  test_paths.py  test_plots.py  test_representations.py  test_runlog.py  test_runspec.py  test_student.py  test_student_cli.py  test_teacher_student.py  test_training_loop.py
tinybert_xai/: __init__.py  checkpoints.py  conditions.py  config.py  datasets.py  losses.py  runlog.py  runspec.py  student.py  teacher.py  training.py  utils.py
(+133 files in other folders)
