[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybert-xai"
version = "0.0.1"
description = "TinyBERT-XAI — multi-level KD factorial ablation across 9 classification datasets."
requires-python = ">=3.12,<3.13"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config", "models", "data", "utils"]
